--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Snake Game</title>
   <style>
-    body { background: #222; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+    body { background: #222; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; margin: 0; }
     canvas { background: #111; border: 2px solid #0f0; }
     h1 { color: #0f0; text-align: center; }
+    #restart-btn { display: none; margin-top: 20px; padding: 10px 20px; font-size: 18px; background: #0f0; color: #111; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; }
   </style>
 </head>
 <body>
@@ -15,6 +16,7 @@
     <h1>Snake Game</h1>
     <canvas id="game" width="400" height="400"></canvas>
     <p style="color:#fff; text-align:center;">방향키로 조작하세요!</p>
+    <button id="restart-btn" onclick="restartGame()">게임 재시작</button>
   </div>
   <script src="snake.js"></script>
 </body>
