--- a/index.html
+++ b/index.html
@@ -8,15 +8,31 @@
     body { background: #222; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; margin: 0; }
     canvas { background: #111; border: 2px solid #0f0; }
     h1 { color: #0f0; text-align: center; }
-    #restart-btn { display: none; margin-top: 20px; padding: 10px 20px; font-size: 18px; background: #0f0; color: #111; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; }
+    #restart-btn, #start-btn { display: none; margin-top: 20px; padding: 10px 20px; font-size: 18px; background: #0f0; color: #111; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; }
+    #mobile-controls { display: none; margin-top: 20px; }
+    .arrow-btn { width: 50px; height: 50px; margin: 5px; font-size: 32px; background: #333; color: #0f0; border: none; border-radius: 10px; }
+    @media (max-width: 600px) {
+      #mobile-controls { display: block; }
+    }
   </style>
 </head>
 <body>
   <div>
     <h1>Snake Game</h1>
     <canvas id="game" width="400" height="400"></canvas>
-    <p style="color:#fff; text-align:center;">방향키로 조작하세요!</p>
+    <p style="color:#fff; text-align:center;">방향키 또는 터치로 조작하세요!</p>
+    <button id="start-btn" onclick="startGame()">게임 시작</button>
     <button id="restart-btn" onclick="restartGame()">게임 재시작</button>
+    <div id="mobile-controls">
+      <div style="text-align:center;">
+        <button class="arrow-btn" onclick="mobileInput('ArrowUp')">▲</button>
+      </div>
+      <div style="text-align:center;">
+        <button class="arrow-btn" onclick="mobileInput('ArrowLeft')">◀</button>
+        <button class="arrow-btn" onclick="mobileInput('ArrowDown')">▼</button>
+        <button class="arrow-btn" onclick="mobileInput('ArrowRight')">▶</button>
+      </div>
+    </div>
   </div>
   <script src="snake.js"></script>
 </body>
